# meta-app

./: README.md  pyproject.toml
forms/: ui_main.ui
meta_app/: main.py
meta_app/core/: file_handler.py
meta_app/ui/: mainWindow.py
meta_app/ui/views/: ui_main.py
scripts/: convert_ui.py
src/meta_app/: main.py
src/meta_app/core/: file_handler.py  funcs.py
src/meta_app/ui/: mainWindow.py
src/meta_app/ui/images/: images.qrc
src/meta_app/ui/views/: images_rc.py  objects.py  ui_main.py
